--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
         </h1>
     </header>
 
+    <section>
+        <h2>
+            Insira o nome de usuário
+        </h2>
+        <p id="exercise-one-response"></p>
+        <input type="text" name="user" id="exercise-one-input" class="form-control" />
+        <button id="exercise-one-button" class="btn btn-primary" disabled>
+            Salvar
+        </button>
+    </section>
+
     <script src="./js/index.js"></script>
 </body>
 
