--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
             Salvar
         </button>
     </section>
+    <section>
+        <h2>
+            Gerador de CPF
+        </h2>
+        <p id="exercise-two-response"></p>
+        <button class="btn btn-primary" id="exercise-two-button">
+            Gerar
+        </button>
+    </section>
 
     <script src="./js/index.js"></script>
 </body>
