--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
         </button>
     </section>
 
+    <section>
+        <h2>
+            Verificador de CPF
+        </h2>
+        <p id="exercise-three-response"></p>
+        <input type="text" class="form-control" id="exercise-three-input"/>
+        <button class="btn btn-primary" id="exercise-three-button">
+            Verificar
+        </button>
+    </section>
+
     <script src="./js/index.js"></script>
 </body>
 
